--- a/build.gradle
+++ b/build.gradle
@@ -49,15 +49,14 @@ dependencyManagement {
 	}
 }
 
-//tasks.named("bootBuildImage") {
-//	docker {
-//		host = "$HOME/.docker/run/docker.sock"
-//	}
-//}
+bootRun {
+	systemProperty 'spring.profiles.active', 'testdata'
+}
 
 bootBuildImage {
+	builder = "docker.io/paketobuildpacks/builder-jammy-base"
 	imageName = "${project.name}"
-	environment = ["BP_JVM_VERSION" : "17.*"]
+	environment = ["BP_JVM_VERSION": "17"]
 
 	docker {
 		publishRegistry {
@@ -66,10 +65,6 @@ bootBuildImage {
 			url = project.findProperty("registryUrl")
 		}
 	}
-}
-
-bootRun {
-	systemProperty 'spring.profiles.active', 'testdata'
 }
 
 tasks.named('test') {
